--- a/TimeHopper/Storyboards/Location.storyboard
+++ b/TimeHopper/Storyboards/Location.storyboard
@@ -83,8 +83,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jog-0c-Eq2">
-                                <rect key="frame" x="16" y="175" width="361" height="614"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="16" y="123" width="361" height="666"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -98,7 +98,7 @@
                             <constraint firstItem="Jog-0c-Eq2" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="20" id="x88-Xy-PGE"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="OJW-OX-2x4"/>
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="OJW-OX-2x4"/>
                     <connections>
                         <outlet property="detailedInformation" destination="Jog-0c-Eq2" id="kSE-yA-xSY"/>
                     </connections>
@@ -115,9 +115,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bfY-2g-9p9">
-                                <rect key="frame" x="16" y="141" width="361" height="608"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bfY-2g-9p9">
+                                <rect key="frame" x="16" y="128" width="361" height="621"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -134,7 +134,7 @@
                         <viewLayoutGuide key="safeArea" id="fmd-Mg-bWS"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="bfY-2g-9p9" firstAttribute="top" secondItem="O6X-YI-sXS" secondAttribute="bottom" constant="38" id="9Co-C0-xkZ"/>
+                            <constraint firstItem="bfY-2g-9p9" firstAttribute="top" secondItem="O6X-YI-sXS" secondAttribute="bottom" constant="25" id="9Co-C0-xkZ"/>
                             <constraint firstItem="O6X-YI-sXS" firstAttribute="top" secondItem="fmd-Mg-bWS" secondAttribute="top" id="Bv4-MQ-3DE"/>
                             <constraint firstItem="fmd-Mg-bWS" firstAttribute="bottom" secondItem="bfY-2g-9p9" secondAttribute="bottom" constant="20" id="dOT-kG-cLv"/>
                             <constraint firstItem="O6X-YI-sXS" firstAttribute="trailing" secondItem="fmd-Mg-bWS" secondAttribute="trailing" id="grP-fM-h3s"/>
