--- a/TimeHopper/Storyboards/Base.lproj/Main.storyboard
+++ b/TimeHopper/Storyboards/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Введите Ваше имя:" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lwP-Bf-sea">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Как тебя зовут?" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lwP-Bf-sea">
                                 <rect key="frame" x="29" y="280" width="262" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
@@ -49,7 +49,7 @@
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="Настроить машину времени"/>
                                 <connections>
-                                    <segue destination="N9F-kI-LDS" kind="show" identifier="showQuestionsVC" id="Udv-JP-1bd"/>
+                                    <action selector="timeMachineButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ea7-XM-VVM"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -74,6 +74,7 @@
                     <connections>
                         <outlet property="nameTextField" destination="lwP-Bf-sea" id="Xkn-87-m30"/>
                         <outlet property="timeMachineButton" destination="G3L-RJ-w5u" id="UVl-J4-0xu"/>
+                        <segue destination="N9F-kI-LDS" kind="show" identifier="showQuestionsVC" id="C13-MT-gN3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
