--- a/TimeHopper/Storyboards/QuizStoryboard.storyboard
+++ b/TimeHopper/Storyboards/QuizStoryboard.storyboard
@@ -114,6 +114,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Начинаем " id="F3d-UD-RGE"/>
                     <connections>
+                        <outlet property="firstAnswerLabel" destination="Wic-7u-N6j" id="73k-Ba-2pu"/>
                         <outlet property="firstSwitch" destination="9jO-6K-vp4" id="1OO-p1-bIk"/>
                         <outlet property="fourthAnswerLabel" destination="02Y-n9-AZR" id="Tzp-jB-stm"/>
                         <outlet property="fourthSwitch" destination="VN9-3C-qv9" id="jC9-uj-xwR"/>
@@ -123,11 +124,22 @@
                         <outlet property="secondSwitch" destination="kF3-dq-qOR" id="J1I-Me-YZ2"/>
                         <outlet property="thirdAnswerLabel" destination="OLC-0A-8Zp" id="MK6-sy-ulA"/>
                         <outlet property="thirdSwitch" destination="Y1w-Xz-mrm" id="Y4D-ao-yYg"/>
+                        <segue destination="LVq-Em-046" kind="presentation" identifier="locationResultSegue" id="5sO-M9-V1P"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="922.32558139534888" y="-14.806866952789701"/>
+        </scene>
+        <!--location-->
+        <scene sceneID="9v3-HP-ByM">
+            <objects>
+                <viewControllerPlaceholder storyboardIdentifier="location" storyboardName="Location" referencedIdentifier="location" id="LVq-Em-046" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="ym5-r9-khK"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mvD-Pr-6jN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1592" y="-15"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="sf8-RN-2IY">
